--- a/my-app/src/Components/UI/Table/ProductTable/ProductTable.module.css
+++ b/my-app/src/Components/UI/Table/ProductTable/ProductTable.module.css
@@ -9,9 +9,9 @@
          0px 10px 20px rgba(0,0,0,0.4);
         
 }
-.font td:nth-of-type(1) , td:nth-of-type(7) {
+/* .font td:nth-of-type(1) , td:nth-of-type(7) {
   display: none;
 }
 .font th:nth-of-type(1) , th:nth-of-type(7){
   display: none;
-}
+} */
