--- a/my-app/src/Components/Input/SpreadSheet/Spreadsheet.css
+++ b/my-app/src/Components/Input/SpreadSheet/Spreadsheet.css
@@ -9,31 +9,60 @@
 .p-datatable .p-datatable-thead > tr > th {
     background-color:#10b981 !important;
     color:white;
+    /* padding-bottom: 0.75rem;
+    padding-top: 0.75rem;
+    padding-left: 1.5rem;
+    padding-right: 1.5rem; */
     text-shadow: 0px 4px 3px rgba(0,0,0,0.4),
          0px 5px 10px rgba(0,0,0,0.7),
          0px 10px 23px rgba(0,0,0,0.4);    
+}
+.subTable .p-datatable-thead > tr > th {
+    background-color:#e9b15e !important;
+    color:white;
+    /* padding-bottom: 0.75rem;
+    padding-top: 0.75rem;
+    padding-left: 1.5rem;
+    padding-right: 1.5rem; */
+    text-shadow: 0px 4px 3px rgba(0,0,0,0.4),
+         0px 5px 10px rgba(0,0,0,0.7),
+         0px 10px 23px rgba(0,0,0,0.4);    
+}
+.p-datatable-table{
+    width:100% !important;
 }
 .p-datatable-wrapper{
     border-radius: 15px !important;
     font-family: 'Kanit', sans-serif ; 
 }
 .p-datatable .p-datatable-tbody > tr > td.QBal {
+    width:10%;
     font-weight: 700;
     color: #66BB6A !important;
 }
 
 .p-datatable .p-datatable-tbody > tr > td.BAL {
+    width:10%;
     font-weight: 700;
     color: #FFA726 !important;
 }
 .p-datatable .p-datatable-tbody > tr > td.minPrice {
+    width:10%;
     font-weight: 700;
     color: #FF5252 !important;
 }
 .p-datatable .p-datatable-tbody > tr > td.maxPrice {
+    width:10% ;
     font-weight: 700;
     color: #CC66FF !important;
 }
+.p-datatable .p-datatable-tbody > tr > td.Cost{
+    width:200px !important;
+}
+.p-datatable-table > .p-datatable-thead > th.Cost >.p-column-header-content{
+    width:200px !important;
+}
+
 /* .p-datatable .p-datatable-tbody >  th:nth-of-type(7) {
     display: none;
 } */
