--- a/my-app/src/Components/UI/Table/ProductTable/ProductTable.module.css
+++ b/my-app/src/Components/UI/Table/ProductTable/ProductTable.module.css
@@ -9,9 +9,30 @@
          0px 10px 20px rgba(0,0,0,0.4);
         
 }
-.font td:nth-of-type(1) , td:nth-of-type(7) {
+.font td:nth-of-type(1) , td:nth-of-type(8) {
   display: none;
 }
-.font th:nth-of-type(1) , th:nth-of-type(7){
+.font th:nth-of-type(1) , th:nth-of-type(8){
   display: none;
+}
+.font td:nth-of-type(3) {
+  color:coral;
+}
+.font td:nth-of-type(4) {
+  color:green;
+}
+.font td:nth-of-type(5) {
+  color:purple;
+}
+.font td:nth-of-type(6) {
+  color:red;
+}
+.font td:nth-of-type(11) {
+  color:rgb(255, 0, 242);
+}
+.col1{
+  width:270px;
+}
+.costInput{
+  width:200px;
 }
