--- a/my-app/src/Components/UI/Table/ProductTable/ProductTable.module.css
+++ b/my-app/src/Components/UI/Table/ProductTable/ProductTable.module.css
@@ -2,6 +2,9 @@
     /* font-family: "Poppins", sans-serif; */
     font-family: 'Kanit', sans-serif ;
   }
+  .font2{
+    font-family: 'Kanit', sans-serif ;
+  }
   .textCustom{
     color:white;
     text-shadow: 0px 2px 3px rgba(0,0,0,0.4),
