--- a/my-app/src/Components/Input/SelectBox/Selectbox.css
+++ b/my-app/src/Components/Input/SelectBox/Selectbox.css
@@ -1,10 +1,13 @@
 .multiSelectContainer {
-    width:50% !important;
+    width:60% !important;
     height:40px !important;
     border:0px !important;
 }
 .searchBox {
-    width:50%;
+    width:40%;
     height:30px !important;
    
+}
+.test{
+    width: 300px!important;
 }
