--- a/my-app/src/Components/UI/Table/ProductTable/ProductTable.module.css
+++ b/my-app/src/Components/UI/Table/ProductTable/ProductTable.module.css
@@ -12,10 +12,10 @@
          0px 10px 20px rgba(0,0,0,0.4);
         
 }
-.font td:nth-of-type(1) , td:nth-of-type(8) {
+.font td:nth-of-type(1) , .font td:nth-of-type(8) {
   display: none;
 }
-.font th:nth-of-type(1) , th:nth-of-type(8){
+.font th:nth-of-type(1) , .font th:nth-of-type(8){
   display: none;
 }
 .font td:nth-of-type(3) {
