--- a/my-app/src/Components/UI/Table/ProductTable/ProductTable.module.css
+++ b/my-app/src/Components/UI/Table/ProductTable/ProductTable.module.css
@@ -5,6 +5,9 @@
   .font2{
     font-family: 'Kanit', sans-serif ;
   }
+.fontUser {
+  font-family: 'Kanit', sans-serif ;
+} 
   .textCustom{
     color:white;
     text-shadow: 0px 2px 3px rgba(0,0,0,0.4),
